# FIGIMappingTool

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  oldCMakeLists.txt  version.rc
FIGIMappingTool/: FIGIMappingTool.aps  FIGIMappingTool.rc  OpenFigi.aps  Request.cpp  Request.h  main.cpp
FIGIMappingTool/core/: OpenFigiClient.cpp  OpenFigiClient.h
FIGIMappingTool/states/: BaseWindow.h  FileState.cpp  FileState.h  WindowState.cpp  WindowState.h
FIGIMappingTool/tests/: filetesting.txt
FIGIMappingTool/utilities/: jsonparse.cpp  jsonparse.h  utils.h
OpenFIGI/: AppWindow.cpp  AppWindow.h  OpenFigi.manifest  OpenFigi.rc  Request.cpp  Request.h  main.cpp
OpenFIGI/archive/: jsonparse_old.cpp
OpenFIGI/states/: BaseWindow.h  FileState.cpp  FileState.h  WindowState.cpp  WindowState.h  WindowState_oldd.cpp
OpenFIGI/tests/: Testing.json  Testing_2.json  UnstructuredData.json
OpenFIGI/utilities/: Timer.cpp  jsonparse.cpp  jsonparse.h  utils.cpp  utils.h
